--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.12",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mocha": "^8.2.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
