--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.12",
     "morgan": "~1.9.1",
-    "mocha": "^8.2.1"
+    "mocha": "^8.2.1",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
